Friday Mrn - align,prevent, designbits

--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ header {
 .more-lines-controller {
     justify-content: center;
     padding-top: 2px;
-    gap: px;
+    gap: 2px;
 }
 
 .additions {
@@ -80,7 +80,8 @@ header {
 .canvas-container {
     width: 100%;
     /* height: 80vh; */
-    background-color: red;
+    background-color: gray;
+    padding: 2px;
 }
 
 .canvas {
@@ -108,6 +109,7 @@ button {
 }
 
 .download-link {
+    margin-top: 10px;
     background-color: whitesmoke;
     border-radius: 8px;
     color: black;
@@ -158,4 +160,17 @@ footer .logo {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+select {
+    font-size: 0.9rem;
+    padding: 2px 5px;
+}
+
+.text-line {
+    border: 1px solid gray;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    background-color: lightgrey;
+    padding: 5px;
 }
